postgres-hasura/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

  annotations:
    istio-injection: enabled
