postgres-hasura/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coregonus-db

  labels:
    component: hasura

spec:
  replicas: 1

  template:
    metadata:
      labels:
        component: hasura

    spec:
      serviceAccountName: coregonus-db

      containers:
      - name: hasura
        image: hasura/graphql-engine:latest

        ports:
        - name: http-api
          containerPort: 8080

        resources:
          limits:
            memory: 2048Mi
            cpu: 4000m
          requests:
            memory: 64Mi
            cpu: 10m
