postgres-hasura/k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api

spec:
  hosts:
  - api.coregonus.test

  gateways:
  - istio-system/ingress
  - mesh

  http:
  - name: hasura-http-api
    route:
    - destination:
        host: coregonus-db.app.svc.cluster.local
        port:
          number: 80
